fix unassianble experissson

--- a/www/templates/addNewStudent.html
+++ b/www/templates/addNewStudent.html
@@ -4,7 +4,7 @@
     <form id="addNewStudent-form6" class="list">
       <label class="item item-input" id="addNewStudent-input14">
         <span class="input-label">Student ID</span>
-        <input type="text" placeholder="" ng-model="data-Stukey">
+        <input type="text" placeholder="" ng-model="data.Stukey">
       </label>
       <label class="item item-input" id="addNewStudent-input15">
         <span class="input-label">name </span>
