--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,30 +1,30 @@
 <ion-view title="Signup" id="page6" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
-    <form id="signup-form5" class="list">
+    <form id="signup-form5" name="signUpAdv" class="list">
       <h1 id="signup-heading2" style="color:#000000;">NBU Academic Advising</h1>
       <ion-list id="signup-list4">
         <label class="item item-input" id="signup-input8">
           <span class="input-label">Academic ID</span>
-          <input type="text" placeholder="">
+          <input type="text" placeholder="" required ng-model="AdInfo.advId">
         </label>
         <label class="item item-input" id="signup-input9">
           <span class="input-label">Name</span>
-          <input type="text" placeholder="">
+          <input type="text" placeholder="" required ng-model="AdInfo.advName">
         </label>
         <label class="item item-input" id="signup-input10">
           <span class="input-label">Department</span>
-          <input type="text" placeholder="">
+          <input type="text" placeholder="" required ng-model="AdInfo.advDepartment">
         </label>
         <label class="item item-input" id="signup-input11">
           <span class="input-label">Email Address</span>
-          <input type="email" placeholder="">
+          <input type="email" placeholder="" ng-model="AdInfo.advEmail">
         </label>
         <label class="item item-input" id="signup-input13">
           <span class="input-label">Password</span>
-          <input type="password" placeholder="">
+          <input type="password" placeholder="" required ng-model="AdInfo.advPassword">
         </label>
       </ion-list>
-      <a ui-sref="loginAademicAdvisor()" id="signup-button7" ng-click="update data()" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Sign up</a>
+      <a ng-disabled="signUpAdv.$invalid" id="signup-button7" ng-click="signUp()" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Sign up</a>
     </form>
   </ion-content>
 </ion-view>
