add new template fixes form salwa

--- a/www/templates/addNewStudent.html
+++ b/www/templates/addNewStudent.html
@@ -4,7 +4,7 @@
     <form id="addNewStudent-form6" class="list">
       <label class="item item-input" id="addNewStudent-input14">
         <span class="input-label">Student ID</span>
-        <input type="text" placeholder="" ng-model="data.Stukey">
+        <input type="text" placeholder="">
       </label>
       <label class="item item-input" id="addNewStudent-input15">
         <span class="input-label">name </span>
@@ -22,15 +22,11 @@
         <span class="input-label">Department</span>
         <input type="text" placeholder="">
       </label>
-      <label class="item item-input" id="addNewStudent-input18">
-        <span class="input-label">Faculty</span>
-        <input type="text" placeholder="">
-      </label>
       <label class="item item-input" id="addNewStudent-input19">
-        <span class="input-label">Academic advisor</span>
+        <span class="input-label">Academic Advisor</span>
         <input type="text" placeholder="">
       </label>
     </form>
-    <a ui-sref="menu.planForAcademicAdvisor()" id="addNewStudent-button8" ng-click="addStudent()" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Add</a>
+    <a ui-sref="menu.myStudents()" id="addNewStudent-button8" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Add</a>
   </ion-content>
 </ion-view>
