--- a/www/templates/checkSchedule.html
+++ b/www/templates/checkSchedule.html
@@ -24,7 +24,6 @@
         <span class="item-note">Subject name </span>
       </ion-item>
     </ion-list>
-    <a ui-sref="agree()" id="checkSchedule-button23" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Agree</a>
-    <a ui-sref="disagree()" id="checkSchedule-button25" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Disagree</a>
+    <a ui-sref="addSubject2()" id="checkSchedule-button23" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Add Subject</a>
   </ion-content>
 </ion-view>
