--- a/www/templates/editStudent.html
+++ b/www/templates/editStudent.html
@@ -5,16 +5,16 @@
         <span class="input-label">Student ID</span>
         <input type="text" placeholder="">
       </label>
+      <label class="item item-input" id="editStudent-input29">
+        <span class="input-label">Student name</span>
+        <input type="text" placeholder="">
+      </label>
       <label class="item item-input" id="editStudent-input32">
         <span class="input-label">Level</span>
         <input type="number" placeholder="">
       </label>
       <label class="item item-input" id="editStudent-input34">
         <span class="input-label">Department</span>
-        <input type="text" placeholder="">
-      </label>
-      <label class="item item-input" id="editStudent-input35">
-        <span class="input-label">Faculty</span>
         <input type="text" placeholder="">
       </label>
     </form>
