--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,6 +12,6 @@
         </label>
       </ion-list>
     </form>
-    <a ui-sref="wELCOME()" id="login-button11" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Log in</a>
+    <a ui-sref="welcomeStudent()" id="login-button11" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Log in</a>
   </ion-content>
 </ion-view>
