--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,12 +14,13 @@
     </ion-header-bar>
     <ion-content padding="false" class="side-menu-left has-header ">
       <ion-list id="menu-list1">
-        <ion-item class="positive" id="menu-list-item5" ui-sref="home()" menu-close="">Home</ion-item>
+        <ion-item class="positive" id="menu-list-item5" ui-sref="home()" menu-close="">Log out </ion-item>
         <ion-item class="positive" id="menu-list-item2" ui-sref="menu.myStudents()" menu-close="">Check students</ion-item>
         <ion-item class="positive" id="menu-list-item3" ui-sref="menu.addNewStudent()" menu-close="">Add new student</ion-item>
         <ion-item class="positive" id="menu-list-item4" ui-sref="menu.addSubject()" menu-close="">Add subject</ion-item>
+        <ion-item class="positive" id="menu-list-item8" ui-sref="menu.planForAcademicAdvisor()" menu-close="">Plan for Academic Advisor </ion-item>
       </ion-list>
-      <button id="menu-button10" style="border-radius:156px 156px 156px 156px;" class="button button-positive button-block">Notifications </button>
+      <button id="menu-button10" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Notifications </button>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
