--- a/www/templates/myStudents.html
+++ b/www/templates/myStudents.html
@@ -1,10 +1,10 @@
-<ion-view title="My Students" id="page14">
+<ion-view title="My Students" id="page14" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
     <form id="myStudents-form12" class="list">
       <ion-radio id="myStudents-radio1">Student name </ion-radio>
       <ion-radio id="myStudents-radio3">Student name </ion-radio>
       <ion-radio id="myStudents-radio4">Student name </ion-radio>
     </form>
-    <a ui-sref="menu.student()" id="myStudents-button30" style="border-radius:128px 128px 128px 128px;" class="button button-positive button-block">Go to the selected student profi</a>
+    <a ui-sref="menu.student()" id="myStudents-button30" style="border-radius:128px 128px 128px 128px;" class="button button-calm button-block">Go to the selected student profi</a>
   </ion-content>
 </ion-view>
