--- a/www/templates/planForAcademicAdvisor.html
+++ b/www/templates/planForAcademicAdvisor.html
@@ -1,3 +1,3 @@
-<ion-view title="Plan for academic advisor " id="page9" style="background-color:#95AFE9;">
+<ion-view title="Plan for academic advisor " id="page9" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header"></ion-content>
 </ion-view>
