--- a/www/templates/addSubject.html
+++ b/www/templates/addSubject.html
@@ -27,7 +27,7 @@
         <input type="number" placeholder="">
       </label>
     </form>
-    <a ui-sref="menu.planForAcademicAdvisor()" id="addSubject-button9" ng-click="updatePlan()" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Add</a>
-    <a ui-sref="menu.welcome()" id="addSubject-button26" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Back</a>
+    <a ui-sref="menu.planForAcademicAdvisor()" id="addSubject-button9" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Add</a>
+    <a ui-sref="menu.welcome()" id="addSubject-button26" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Back</a>
   </ion-content>
 </ion-view>
