--- a/www/templates/schedule.html
+++ b/www/templates/schedule.html
@@ -1,26 +1,30 @@
 <ion-view title="Schedule" id="page27" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
-    <h2 id="schedule-heading8" style="color:#000000;">Level x</h2>
+    <h2 id="schedule-heading8" style="color:#000000;">Level {{}}</h2>
     <ion-list id="schedule-list15">
-      <ion-item id="schedule-list-item45">Subject1
-        <span class="item-note">Hours= </span>
+      <ion-item id="schedule-list-item45">
+        <span class="item-note">subject name and Hours</span>
       </ion-item>
-      <ion-item id="schedule-list-item44">Subject2
-        <span class="item-note">Hours= </span>
+      <ion-item id="schedule-list-item9">
+        <span class="item-note">subject name and Hours</span>
       </ion-item>
-      <ion-item id="schedule-list-item46">Subject3
-        <span class="item-note">Hours= </span>
+      <ion-item id="schedule-list-item17">
+        <span class="item-note">subject name and Hours</span>
       </ion-item>
-      <ion-list id="schedule-list12">
-        <ion-item id="schedule-list-item41">Subject4
-          <span class="item-note">Hours= </span>
-        </ion-item>
-        <ion-item id="schedule-list-item42">Subject5
-          <span class="item-note">Hours= </span>
-        </ion-item>
-      </ion-list>
+      <ion-item id="schedule-list-item19">
+        <span class="item-note">subject name and Hours</span>
+      </ion-item>
+      <ion-item id="schedule-list-item20">
+        <span class="item-note">subject name and Hours</span>
+      </ion-item>
+      <ion-item id="schedule-list-item21">
+        <span class="item-note">subject name and Hours</span>
+      </ion-item>
+      <ion-item id="schedule-list-item22">
+        <span class="item-note">subject name and Hours</span>
+      </ion-item>
       <label class="item item-input" id="schedule-textarea16">
-        <span class="input-label">Total Hours ..</span><textarea placeholder=""></textarea></label>
+        <span class="input-label">Total Hours :</span><textarea placeholder=""></textarea></label>
     </ion-list>
     <button id="schedule-button64" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Send</button>
   </ion-content>
