--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="true">
+<ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button></ion-nav-back-button>
@@ -14,11 +14,36 @@
     </ion-header-bar>
     <ion-content padding="false" class="side-menu-left has-header ">
       <ion-list id="menu-list1">
-        <ion-item class="positive" id="menu-list-item5" ui-sref="home()" menu-close="">Log out </ion-item>
-        <ion-item class="positive" id="menu-list-item2" ui-sref="menu.myStudents()" menu-close="">Check students</ion-item>
-        <ion-item class="positive" id="menu-list-item3" ui-sref="menu.addNewStudent()" menu-close="">Add new student</ion-item>
-        <ion-item class="positive" id="menu-list-item4" ui-sref="menu.addSubject()" menu-close="">Add subject</ion-item>
-        <ion-item class="positive" id="menu-list-item8" ui-sref="menu.planForAcademicAdvisor()" menu-close="">Plan for Academic Advisor </ion-item>
+        <ion-item class="positive item-icon-left item-icon-right" id="menu-list-item5" menu-close="">
+          <i class="icon ion-android-notifications"></i>
+          Requests
+          <span class="icon icon-accessory ion-chevron-right"></span>
+        </ion-item>
+        <ion-item class="positive item-icon-left item-icon-right" id="menu-list-item2" ui-sref="menu.myStudents()" menu-close="">
+          <i class="icon ion-ios-people"></i>
+          Check students
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
+        <ion-item class="positive item-icon-left item-icon-right" id="menu-list-item3" ui-sref="menu.addNewStudent()" menu-close="">
+          <i class="icon ion-ios-personadd"></i>
+          Add student
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
+        <ion-item class="positive item-icon-left item-icon-right" id="menu-list-item4" ui-sref="menu.addSubject()" menu-close="">
+          <i class="icon ion-compose"></i>
+          Add subject
+          <span class="icon icon-accessory ion-chevron-right"></span>
+        </ion-item>
+        <ion-item class="positive item-icon-left item-icon-right" id="menu-list-item8" ui-sref="menu.planForAcademicAdvisor()" menu-close="">
+          <span class="icon ion-calendar"></span>
+          Plan
+          <span class="icon icon-accessory ion-chevron-right"></span>
+        </ion-item>
+        <ion-item class="positive item-icon-left item-icon-right" id="menu-list-item5" ui-sref="home()" menu-close="">
+          <i class="icon ion-log-out assertive"></i>
+          Log out
+          <span class="icon icon-accessory ion-chevron-right"></span>
+        </ion-item>
       </ion-list>
       <button id="menu-button10" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Notifications </button>
     </ion-content>
