--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -1,9 +1,9 @@
 <ion-view title="Welcome " id="page26" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
     <ion-list id="welcome-list9">
-      <ion-item id="welcome-list-item6">Name</ion-item>
-      <ion-item id="welcome-list-item36">Academic ID</ion-item>
-      <ion-item id="welcome-list-item7">Department</ion-item>
+      <ion-item id="welcome-list-item6">Name: {{$root.advisor.Aca_name}}</ion-item>
+      <ion-item id="welcome-list-item36">Academic ID: {{$root.advisor.Aca_id}}</ion-item>
+      <ion-item id="welcome-list-item7">Department: {{$root.advisor.Department.Dep_name}}</ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
