--- a/www/templates/myStudents.html
+++ b/www/templates/myStudents.html
@@ -1,10 +1,12 @@
 <ion-view title="My Students" id="page14" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
-    <form id="myStudents-form12" class="list">
-      <ion-radio id="myStudents-radio1">Student name </ion-radio>
-      <ion-radio id="myStudents-radio3">Student name </ion-radio>
-      <ion-radio id="myStudents-radio4">Student name </ion-radio>
-    </form>
+
+    <ion-list>
+      <ion-item class="item-icon-right" ng-repeat="student in myStudents" ui-sref="menu.student({student:student})">
+        {{student.Stu_name}}
+        <i class="icon ion-chevron-right icon-accessory"></i>
+      </ion-item>
+    </ion-list>
     <a ui-sref="menu.student()" id="myStudents-button30" style="border-radius:128px 128px 128px 128px;" class="button button-calm button-block">Go to the selected student profi</a>
   </ion-content>
 </ion-view>
