--- a/www/templates/addNewStudent.html
+++ b/www/templates/addNewStudent.html
@@ -1,32 +1,33 @@
 <ion-view title="Add new student" id="page7" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
     <h1 id="addNewStudent-heading3" style="color:#000000;font-weight:300;text-align:center;">Add new student</h1>
-    <form id="addNewStudent-form6" class="list">
+    <form id="addNewStudent-form6" name="addNewStudent" class="list">
       <label class="item item-input" id="addNewStudent-input14">
         <span class="input-label">Student ID</span>
-        <input type="text" placeholder="">
+        <input type="text" placeholder="" ng-model="student.Stu_id" required>
       </label>
       <label class="item item-input" id="addNewStudent-input15">
         <span class="input-label">name </span>
-        <input type="text" placeholder="">
+        <input type="text" placeholder="" ng-model="student.Stu_name" required>
       </label>
       <label class="item item-input" id="addNewStudent-input26">
         <span class="input-label">Password </span>
-        <input type="password" placeholder="">
+        <input type="password" placeholder="" ng-model="student.password" required>
       </label>
       <label class="item item-input" id="addNewStudent-input16">
         <span class="input-label">Level</span>
-        <input type="number" placeholder="">
+        <input type="number" placeholder="" ng-model="student.Level" required>
       </label>
       <label class="item item-input" id="addNewStudent-input17">
         <span class="input-label">Department</span>
-        <input type="text" placeholder="">
+        <input type="text" placeholder="" ng-model="student.Dep_id" required>
       </label>
       <label class="item item-input" id="addNewStudent-input19">
         <span class="input-label">Academic Advisor</span>
-        <input type="text" placeholder="">
+        <input type="text" placeholder="" ng-model="student.Aca_id" required>
       </label>
     </form>
-    <a ui-sref="menu.myStudents()" id="addNewStudent-button8" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Add</a>
+    <a ng-click="add(student)" ng-disabled="addNewStudent.$invalid" id="addNewStudent-button8" style="border-radius:60px 60px 60px 60px;"
+      class="button button-calm button-block">Add</a>
   </ion-content>
 </ion-view>
