--- a/www/templates/welcomeStudent.html
+++ b/www/templates/welcomeStudent.html
@@ -1,10 +1,10 @@
 <ion-view title="Welcome Student " id="page12" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
     <form id="welcomeStudent-form11" class="list">
-      <ion-item id="welcomeStudent-list-item10">Stu_name</ion-item>
-      <ion-item id="welcomeStudent-list-item11">Student ID</ion-item>
-      <ion-item id="welcomeStudent-list-item12">Department</ion-item>
-      <ion-item id="welcomeStudent-list-item16">Level</ion-item>
+      <ion-item id="welcomeStudent-list-item10">Student Name: {{$root.student.Stu_name}}</ion-item>
+      <ion-item id="welcomeStudent-list-item11">Student ID: {{$root.student.Stu_id}}</ion-item>
+      <ion-item id="welcomeStudent-list-item12">Department: {{$root.student.Department.Dep_name}}</ion-item>
+      <ion-item id="welcomeStudent-list-item16">Level: {{$root.student.Level}}</ion-item>
       <a ui-sref="checkSchedule()" id="welcomeStudent-button13" style="font-weight:300;border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Check schedule</a>
       <a ui-sref="PlanForStudent()" id="welcomeStudent-button17" style="font-weight:300;border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Check Plan</a>
     </form>
