add NBU logo to home screen

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,10 +1,15 @@
-<ion-view title="Home" id="page1" style="background-color:#BEDEE4;">
+<ion-view title="NBU" id="page1" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
     <h3 id="home-heading1" style="color:#000000;text-align:center;">Welcome to NBU Academic Advising </h3>
     <div class="spacer" style="width: 300px; height: 15px;"></div>
-    <div id="home-markdown2" class="show-list-numbers-and-dots">
-      <p style="color:#000000;">please pick one of the following </p>
+    <div class="row row-center">
+        <div class="col col-center text-center">
+        <img width="90%"  src="http://www.ajel.sa/sites/default/files/styles/optimized_original/public/%D8%AC%D8%A7%D9%85%D8%B9%D8%A9_10.png?itok=SeDWUQUq">
+      </div>
     </div>
+    <!-- <div id="home-markdown2" class="show-list-numbers-and-dots">
+      <p style="color:#000000;">please pick one of the following </p>
+    </div> -->
     <div class="spacer" style="width: 300px; height: 24px;"></div>
     <a ui-sref="loginAademicAdvisor()" id="home-button2" style="font-weight:500;border-radius:60px 60px 60px 60px;" class="button button-calm button-large button-block">Academic Advisor</a>
     <a ui-sref="login()" id="home-button24" style="font-weight:500;font-size:-4px;border-radius:60px 60px 60px 60px;" class="button button-calm button-large button-block">Student</a>
