restrict to number

--- a/www/templates/loginAademicAdvisor.html
+++ b/www/templates/loginAademicAdvisor.html
@@ -4,7 +4,7 @@
       <ion-list id="loginAademicAdvisor-list8">
         <label class="item item-input" id="loginAademicAdvisor-input53">
           <span class="input-label">Academic ID</span>
-          <input type="text" placeholder="" required ng-model="AdInfo.advId">
+          <input type="number" placeholder="" required ng-model="AdInfo.advId">
         </label>
         <label class="item item-input" id="loginAademicAdvisor-input54">
           <span class="input-label">Password </span>
