--- a/www/templates/addSubject.html
+++ b/www/templates/addSubject.html
@@ -1,33 +1,34 @@
 <ion-view title="Add subject" id="page8" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
     <h1 id="addSubject-heading4" style="color:#000000;">Add Subject </h1>
-    <form id="addSubject-form7" class="list">
+    <form name="addSubject" class="list">
       <label class="item item-input" id="addSubject-input20">
-        <span class="input-label">Subject ID</span>
-        <input type="text" placeholder="">
+        <span class="input-label">ID</span>
+        <input type="number" placeholder="" required ng-model="subject.Sub_id">
       </label>
       <label class="item item-input" id="addSubject-input21">
-        <span class="input-label">Subject name</span>
-        <input type="text" placeholder="">
+        <span class="input-label">Name</span>
+        <input type="text" placeholder="" required ng-model="subject.Sub_name">
       </label>
       <label class="item item-input" id="addSubject-input22">
-        <span class="input-label">Subject prerequisite</span>
-        <input type="text" placeholder="">
+        <span class="input-label">Prerequisite ID</span>
+        <input type="number" placeholder="" ng-model="subject.Pre_req_id">
       </label>
       <label class="item item-input" id="addSubject-input23">
-        <span class="input-label">Subject department</span>
-        <input type="text" placeholder="">
+        <span class="input-label">Department</span>
+        <input type="number" placeholder="" required ng-model="subject.Dep_id">
       </label>
       <label class="item item-input" id="addSubject-input24">
         <span class="input-label">Level</span>
-        <input type="number" placeholder="">
+        <input type="number" placeholder="" required ng-model="subject.Level">
       </label>
       <label class="item item-input" id="addSubject-input25">
         <span class="input-label">Hours</span>
-        <input type="number" placeholder="">
+        <input type="number" placeholder="" required ng-model="subject.Hour">
       </label>
     </form>
-    <a ui-sref="menu.planForAcademicAdvisor()" id="addSubject-button9" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Add</a>
-    <a ui-sref="menu.welcome()" id="addSubject-button26" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Back</a>
+    <a ng-click="add(subject)" ng-disabled="addSubject.$invalid" id="addSubject-button9"
+      style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Add</a>
+    <!-- <a ui-sref="menu.welcome()" id="addSubject-button26" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Back</a> -->
   </ion-content>
 </ion-view>
