--- a/www/templates/checkSchedule.html
+++ b/www/templates/checkSchedule.html
@@ -1,28 +1,24 @@
 <ion-view title="Check schedule" id="page13" style="background-color:#BEDEE4;">
   <ion-content padding="true" class="has-header">
-    <h1 id="checkSchedule-heading5" style="color:#000000;">Level </h1>
-    <ion-list id="checkSchedule-list17">
-      <ion-item id="checkSchedule-list-item37">
-        <span class="item-note">Subject name </span>
+    <ion-list ng-repeat="(key, value) in subjects  | groupBy: '-Plan.Level'" ng-init="sh[key]=false">
+
+      <ion-item class="item-divider item-icon-right" ng-click="sh[key]= !sh[key]">
+        <h2>Level: {{ key| ltrim: '-' }}</h2>
+        <span class="icon icon-accessory" ng-class="{'ion-chevron-down': sh[key], 'ion-chevron-right': !sh[key]}"></span>
       </ion-item>
-      <ion-item id="checkSchedule-list-item54">
-        <span class="item-note">Subject name </span>
+      <ion-item ng-show="sh[key]" ng-repeat="subject in value| orderBy:'Sub_id'">
+
+        <p>ID: {{subject.Plan.Sub_id}}</p>
+        <h4> Name: {{subject.Plan.Sub_name}}</h4>
+        <p> Department: {{subject.Plan.Department.Dep_name}}</p>
+        <p> Level: {{subject.Plan.Level}}</p>
+        <p ng-if="subject.Plan.Subject.Sub_name">Prerequisits: {{subject.Plan.Subject.Sub_name}}</p>
+        <p> Hour: {{subject.Plan.Hour}} </p>
+        <h5 ng-class="{assertive: subject.Status == 'Failed', royal: subject.Status == 'Succeed', positive: subject.Status == 'Current'}">
+        Status: {{subject.Status}} </h5>
+
       </ion-item>
-      <ion-item id="checkSchedule-list-item39">
-        <span class="item-note">Subject name </span>
-      </ion-item>
-      <ion-item id="checkSchedule-list-item49">
-        <span class="item-note">Subject name </span>
-      </ion-item>
-      <ion-item id="checkSchedule-list-item50">
-        <span class="item-note">Subject name </span>
-      </ion-item>
-      <ion-item id="checkSchedule-list-item52">
-        <span class="item-note">Subject name </span>
-      </ion-item>
-      <ion-item id="checkSchedule-list-item53">
-        <span class="item-note">Subject name </span>
-      </ion-item>
+
     </ion-list>
     <a ui-sref="addSubject2()" id="checkSchedule-button23" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Add Subject</a>
   </ion-content>
