--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,7 +4,7 @@
     <div class="spacer" style="width: 300px; height: 15px;"></div>
     <div class="row row-center">
         <div class="col col-center text-center">
-        <img width="90%"  src="http://www.ajel.sa/sites/default/files/styles/optimized_original/public/%D8%AC%D8%A7%D9%85%D8%B9%D8%A9_10.png?itok=SeDWUQUq">
+        <img width="90%"  src="./img/NBU.png">
       </div>
     </div>
     <!-- <div id="home-markdown2" class="show-list-numbers-and-dots">
