--- a/www/templates/myStudents.html
+++ b/www/templates/myStudents.html
@@ -7,6 +7,6 @@
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
-    <a ui-sref="menu.student()" id="myStudents-button30" style="border-radius:128px 128px 128px 128px;" class="button button-calm button-block">Go to the selected student profi</a>
+    <!-- <a ui-sref="menu.student()" id="myStudents-button30" style="border-radius:128px 128px 128px 128px;" class="button button-calm button-block">Go to the selected student profi</a> -->
   </ion-content>
 </ion-view>
