remove notification button

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -45,7 +45,7 @@
           <span class="icon icon-accessory ion-chevron-right"></span>
         </ion-item>
       </ion-list>
-      <button id="menu-button10" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Notifications </button>
+      <!-- <button id="menu-button10" style="border-radius:60px 60px 60px 60px;" class="button button-calm button-block">Notifications </button> -->
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
