--- a/www/templates/modifySchedule.html
+++ b/www/templates/modifySchedule.html
@@ -21,6 +21,6 @@
       </ion-item>
 
     </ion-list>
-    <a ui-sref="menu.schedule()" id="modifySchedule-button54" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">done</a>
+    <a  ng-click="checkSchedule()" id="modifySchedule-button54" style="border-radius:19px 19px 19px 19px;" class="button button-calm button-block">Done</a>
   </ion-content>
 </ion-view>
