activate route to requests

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,7 +14,7 @@
     </ion-header-bar>
     <ion-content padding="false" class="side-menu-left has-header ">
       <ion-list id="menu-list1">
-        <ion-item class="positive item-icon-left item-icon-right" id="menu-list-item5" menu-close="">
+        <ion-item class="positive item-icon-left item-icon-right" id="menu-list-item5" ui-sref="menu.requests()" menu-close="">
           <i class="icon ion-android-notifications"></i>
           Requests
           <span class="icon icon-accessory ion-chevron-right"></span>
